--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "7b3f92fd",
    "metadata": {},
    "outputs": [
@@ -10,24 +10,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 1 0 0 0 0 1 1\n",
-      "1 1 0 0 0 0 1 1\n",
-      "0 0 0 0 1 1 0 0\n",
-      "0 0 0 0 1 1 0 0\n",
-      "1 0 0 0 1 1 1 1\n",
-      "0 1 0 0 1 1 1 1\n",
-      "0 0 1 1 1 1 1 1\n",
-      "0 0 1 1 1 1 1 1\n",
-      "\n",
-      "0 0 1 1\n",
-      "0 0 1 1\n",
-      "1 1 0 0\n",
-      "1 1 0 0\n",
-      "\n",
-      "0 0 1 1\n",
-      "0 0 1 1\n",
-      "1 1 0 0\n",
-      "1 1 0 0\n"
+      "9\n",
+      "7\n"
      ]
     }
    ],
@@ -47,27 +31,116 @@
     "0 0 1 1 1 1 1 1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
-    "\n",
     "N = int(input())\n",
-    "\n",
-    "nums = tuple(tuple(map(int, input().split())) for _ in range(N))\n",
-    "\n",
-    "a, b = 0, 4\n",
-    "n = 4\n",
-    "\n",
-    "for row in nums:\n",
-    "    print(*row)\n",
-    "\n",
-    "print(\"\")\n",
-    "for row in nums[a:a+n]:\n",
-    "    print(*row[b:b+n])\n",
+    "nums = [list(map(int, input().split())) for _ in range(N)]\n",
     "\n",
     "\n",
-    "new = [num[b:b+n] for num in nums[a:a+n]]\n",
+    "def get_split(arrays, row, col, length):\n",
+    "    return [array[col:col+length] for array in arrays[row:row+length]]\n",
     "\n",
-    "print(\"\")\n",
-    "for row in new:\n",
-    "    print(*row)"
+    "\n",
+    "def get_squre(num, length):\n",
+    "    return [[num] * length for _ in range(length)]\n",
+    "\n",
+    "\n",
+    "blue = 0\n",
+    "white = 0\n",
+    "\n",
+    "\n",
+    "def dfs(array, length):\n",
+    "    global blue, white\n",
+    "\n",
+    "    if length == 0:\n",
+    "        return\n",
+    "\n",
+    "    if array == get_squre(1, length):\n",
+    "        blue += 1\n",
+    "        return\n",
+    "    if array == get_squre(0, length):\n",
+    "        white += 1\n",
+    "        return\n",
+    "\n",
+    "    n = length//2\n",
+    "\n",
+    "    dfs(get_split(array, 0, 0, n), n)\n",
+    "    dfs(get_split(array, 0, n, n), n)\n",
+    "    dfs(get_split(array, n, 0, n), n)\n",
+    "    dfs(get_split(array, n, n, n), n)\n",
+    "\n",
+    "\n",
+    "dfs(nums, N)\n",
+    "\n",
+    "print(white)\n",
+    "print(blue)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "391bd86f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "9\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "1 1 0 0 0 0 1 1\n",
+    "1 1 0 0 0 0 1 1\n",
+    "0 0 0 0 1 1 0 0\n",
+    "0 0 0 0 1 1 0 0\n",
+    "1 0 0 0 1 1 1 1\n",
+    "0 1 0 0 1 1 1 1\n",
+    "0 0 1 1 1 1 1 1\n",
+    "0 0 1 1 1 1 1 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input().strip())\n",
+    "board = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "white = 0\n",
+    "blue = 0\n",
+    "\n",
+    "def is_uniform(r: int, c: int, size: int) -> int:\n",
+    "    \"\"\"구간이 한 색이면 그 색(0/1)을, 아니면 -1 반환\"\"\"\n",
+    "    first = board[r][c]\n",
+    "    for i in range(r, r + size):\n",
+    "        row = board[i]\n",
+    "        for j in range(c, c + size):\n",
+    "            if row[j] != first:\n",
+    "                return -1\n",
+    "    return first\n",
+    "\n",
+    "def dfs(r: int, c: int, size: int):\n",
+    "    global white, blue\n",
+    "\n",
+    "    color = is_uniform(r, c, size)\n",
+    "    if color == 0:\n",
+    "        white += 1\n",
+    "        return\n",
+    "    if color == 1:\n",
+    "        blue += 1\n",
+    "        return\n",
+    "\n",
+    "    half = size // 2\n",
+    "    dfs(r, c, half)\n",
+    "    dfs(r, c + half, half)\n",
+    "    dfs(r + half, c, half)\n",
+    "    dfs(r + half, c + half, half)\n",
+    "\n",
+    "dfs(0, 0, N)\n",
+    "print(white)\n",
+    "print(blue)\n"
    ]
   },
   {
@@ -77,7 +150,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2\t1992\t 쿼드트리"
+    "# 2\t1992\t 쿼드트리\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "11110000\n",
+    "11110000\n",
+    "00011100\n",
+    "00011100\n",
+    "11110000\n",
+    "11110000\n",
+    "11110011\n",
+    "11110011''')\n",
+    "\n",
+    "\n"
    ]
   },
   {
