--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -148,7 +148,22 @@
    "execution_count": null,
    "id": "1effbabe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11110000\n",
+      "11110000\n",
+      "00011100\n",
+      "00011100\n",
+      "11110000\n",
+      "11110000\n",
+      "11110011\n",
+      "11110011\n"
+     ]
+    }
+   ],
    "source": [
     "# 2\t1992\t 쿼드트리\n",
     "import sys\n",
@@ -164,6 +179,27 @@
     "11110011\n",
     "11110011''')\n",
     "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "img = [input().rstrip() for _ in range(N)]\n",
+    "\n",
+    "out = []\n",
+    "\n",
+    "def is_uniform(r, c, l):\n",
+    "    first = img[r][c]\n",
+    "    for i in range(r, r + l):\n",
+    "        temp = img[i]\n",
+    "        for j in range(c, c + l):\n",
+    "            if temp[j] != first:\n",
+    "                return -1\n",
+    "    else :\n",
+    "        return first\n",
+    "\n",
+    "\n",
+    "\n",
+    "for row in img:\n",
+    "    print(row)\n",
     "\n"
    ]
   },
@@ -240,7 +276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
