--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1effbabe",
    "metadata": {},
    "outputs": [
@@ -153,14 +153,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11110000\n",
-      "11110000\n",
-      "00011100\n",
-      "00011100\n",
-      "11110000\n",
-      "11110000\n",
-      "11110011\n",
-      "11110011\n"
+      "((110(0101))(0010)1(0001))\n"
      ]
     }
    ],
@@ -181,25 +174,32 @@
     "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "N = int(input())\n",
-    "img = [input().rstrip() for _ in range(N)]\n",
-    "\n",
-    "out = []\n",
+    "N = int(input().strip())\n",
+    "img = [input().strip() for _ in range(N)]\n",
     "\n",
     "def is_uniform(r, c, l):\n",
     "    first = img[r][c]\n",
     "    for i in range(r, r + l):\n",
-    "        temp = img[i]\n",
+    "        row = img[i]\n",
     "        for j in range(c, c + l):\n",
-    "            if temp[j] != first:\n",
-    "                return -1\n",
-    "    else :\n",
-    "        return first\n",
+    "            if row[j] != first:\n",
+    "                return None\n",
+    "    return first  # '0' or '1'\n",
     "\n",
+    "def quad(r, c, l):\n",
+    "    u = is_uniform(r, c, l)\n",
+    "    if u is not None:\n",
+    "        return u\n",
+    "    half = l // 2\n",
+    "    return \"(\" + \\\n",
+    "           quad(r, c, half) + \\\n",
+    "           quad(r, c + half, half) + \\\n",
+    "           quad(r + half, c, half) + \\\n",
+    "           quad(r + half, c + half, half) + \\\n",
+    "           \")\"\n",
     "\n",
+    "print(quad(0, 0, N))\n",
     "\n",
-    "for row in img:\n",
-    "    print(row)\n",
     "\n"
    ]
   },
