--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -205,12 +205,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "a0c83a83",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "12\n",
+      "11\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t1780\t 종이의 개수"
+    "# 3\t1780\t 종이의 개수\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''9\n",
+    "0 0 0 1 1 1 -1 -1 -1\n",
+    "0 0 0 1 1 1 -1 -1 -1\n",
+    "0 0 0 1 1 1 -1 -1 -1\n",
+    "1 1 1 0 0 0 0 0 0\n",
+    "1 1 1 0 0 0 0 0 0\n",
+    "1 1 1 0 0 0 0 0 0\n",
+    "0 1 -1 0 1 -1 0 1 -1\n",
+    "0 -1 1 0 1 -1 0 1 -1\n",
+    "0 1 -1 1 0 -1 0 1 -1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "img = tuple(tuple(map(int, input().split())) for _ in range(N))\n",
+    "\n",
+    "\n",
+    "def is_uniform(row, col, length):\n",
+    "    first = img[row][col]\n",
+    "    for r in range(row, row + length):\n",
+    "        temp = img[r]\n",
+    "        for c in range(col, col + length):\n",
+    "            if temp[c] != first:\n",
+    "                return None\n",
+    "    return first\n",
+    "\n",
+    "\n",
+    "out = [0] * 3 #[-1, 0, 1]\n",
+    "\n",
+    "def dfs(row, col, length):\n",
+    "    result = is_uniform(row, col, length)\n",
+    "    if result is not None:\n",
+    "        out[result + 1] += 1\n",
+    "        return\n",
+    "\n",
+    "    step = length // 3\n",
+    "\n",
+    "    for dr in (0, step, 2*step):\n",
+    "        for dc in (0, step, 2*step):\n",
+    "            dfs(row + dr, col + dc, step)\n",
+    "\n",
+    "dfs(0, 0, N)\n",
+    "print(\"\\n\".join(map(str, out)))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f475530b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "12\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''9\n",
+    "0 0 0 1 1 1 -1 -1 -1\n",
+    "0 0 0 1 1 1 -1 -1 -1\n",
+    "0 0 0 1 1 1 -1 -1 -1\n",
+    "1 1 1 0 0 0 0 0 0\n",
+    "1 1 1 0 0 0 0 0 0\n",
+    "1 1 1 0 0 0 0 0 0\n",
+    "0 1 -1 0 1 -1 0 1 -1\n",
+    "0 -1 1 0 1 -1 0 1 -1\n",
+    "0 1 -1 1 0 -1 0 1 -1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "paper = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "# ps[k][i][j] : (0,0) ~ (i-1,j-1) 구간에서\n",
+    "# 값 k-1 (-1,0,1)의 개수\n",
+    "ps = [[[0] * (N + 1) for _ in range(N + 1)] for _ in range(3)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        for k in range(3):\n",
+    "            ps[k][i + 1][j + 1] = (\n",
+    "                ps[k][i][j + 1]\n",
+    "                + ps[k][i + 1][j]\n",
+    "                - ps[k][i][j]\n",
+    "            )\n",
+    "        ps[paper[i][j] + 1][i + 1][j + 1] += 1\n",
+    "\n",
+    "\n",
+    "cnt = [0, 0, 0]  # index: 0->-1, 1->0, 2->1\n",
+    "\n",
+    "def area_sum(k, r, c, n):\n",
+    "    r2, c2 = r + n, c + n\n",
+    "    return (\n",
+    "        ps[k][r2][c2]\n",
+    "        - ps[k][r][c2]\n",
+    "        - ps[k][r2][c]\n",
+    "        + ps[k][r][c]\n",
+    "    )\n",
+    "\n",
+    "def dfs(r, c, n):\n",
+    "    area = n * n\n",
+    "    for k in range(3):\n",
+    "        if area_sum(k, r, c, n) == area:\n",
+    "            cnt[k] += 1\n",
+    "            return\n",
+    "\n",
+    "    step = n // 3\n",
+    "    for dr in (0, step, 2 * step):\n",
+    "        for dc in (0, step, 2 * step):\n",
+    "            dfs(r + dr, c + dc, step)\n",
+    "\n",
+    "\n",
+    "dfs(0, 0, N)\n",
+    "print(cnt[0])\n",
+    "print(cnt[1])\n",
+    "print(cnt[2])\n"
    ]
   },
   {
@@ -276,7 +413,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
