분할_정복 #4 곱셈

--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "a0c83a83",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
     "    return first\n",
     "\n",
     "\n",
-    "out = [0] * 3 #[-1, 0, 1]\n",
+    "out = [0] * 3  # [-1, 0, 1]\n",
     "\n",
     "def dfs(row, col, length):\n",
     "    result = is_uniform(row, col, length)\n",
@@ -264,9 +264,9 @@
     "        for dc in (0, step, 2*step):\n",
     "            dfs(row + dr, col + dc, step)\n",
     "\n",
+    "\n",
     "dfs(0, 0, N)\n",
-    "print(\"\\n\".join(map(str, out)))\n",
-    "\n"
+    "print(\"\\n\".join(map(str, out)))"
    ]
   },
   {
@@ -274,9 +274,41 @@
    "execution_count": null,
    "id": "2b5b56d0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t1629\t 곱셈"
+    "# 4\t1629\t 곱셈\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10 11 12''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "A, B, C = map(int, input().split())\n",
+    "# print(pow(A, B, C)) 내장 함수 \n",
+    "\n",
+    "\n",
+    "a = A % C\n",
+    "b = B\n",
+    "\n",
+    "remain = 1\n",
+    "\n",
+    "while b > 0 : \n",
+    "    if b % 2 != 0:\n",
+    "        remain = (a * remain) % C\n",
+    "    a = (a**2) % C\n",
+    "    b //= 2\n",
+    "\n",
+    "print(remain)\n"
    ]
   },
   {
