--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -316,9 +316,40 @@
    "execution_count": null,
    "id": "7ba52f7e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t11401\t 이항 계수 3"
+    "# 5\t11401\t 이항 계수 3\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, K = map(int, input().split())\n",
+    "\n",
+    "fact = [1] * (N + 1)\n",
+    "\n",
+    "MOD = 1_000_000_007\n",
+    "\n",
+    "for i in range(1, N+1):\n",
+    "    fact[i] = fact[i-1] * i % MOD\n",
+    "\n",
+    "den = fact[K]*fact[N-K]\n",
+    "den_inv = pow(den, MOD - 2, MOD)\n",
+    "\n",
+    "print(fact[N] * den_inv % MOD)\n",
+    "\n",
+    "# 페르마 소정리 ( 이산수학 )"
    ]
   },
   {
