--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -354,12 +354,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "bc5b6ed9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1 -2 6\n",
+      "-3 -6 12\n",
+      "-5 -10 18\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t2740\t 행렬 곱셈"
+    "# 6\t2740\t 행렬 곱셈\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3 2\n",
+    "1 2\n",
+    "3 4\n",
+    "5 6\n",
+    "2 3\n",
+    "-1 -2 0\n",
+    "0 0 3''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "A = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "M, K = map(int, input().split())\n",
+    "B = [list(map(int, input().split())) for _ in range(M)]\n",
+    "\n",
+    "out = [[0] * K for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(K):\n",
+    "        out[i][j] = sum(A[i][m] * B[m][j] for m in range(M))\n",
+    "\n",
+    "for o in out:\n",
+    "    print(*o)"
    ]
   },
   {
