--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -401,12 +401,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "811dba42",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "468 576 684\n",
+      "62 305 548\n",
+      "656 34 412\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t10830\t 행렬 제곱"
+    "# 7\t10830\t 행렬 제곱\n",
+    "from typing import List\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3 3\n",
+    "1 2 3\n",
+    "4 5 6\n",
+    "7 8 9''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "MOD = 1_000\n",
+    "\n",
+    "N, B = map(int, input().split())\n",
+    "A = [list(map(int, input().split())) for _ in range(N)]\n",
+    "Matrix = List[List[int]]\n",
+    "\n",
+    "\n",
+    "def mul_matrix(M1: Matrix, M2: Matrix) -> Matrix:\n",
+    "    length = len(M1)\n",
+    "    result = [[0] * length for _ in range(length)]\n",
+    "    for i in range(length):\n",
+    "        for k in range(length):\n",
+    "            aik = M1[i][k]\n",
+    "            if aik == 0:\n",
+    "                continue\n",
+    "            for j in range(length):\n",
+    "                result[i][j] = (result[i][j] + aik * M2[k][j]) % MOD\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "out = [[0] * N for _ in range(N)]\n",
+    "for i in range(N):\n",
+    "    out[i][i] = 1 # identical\n",
+    "\n",
+    "while B > 0:\n",
+    "    if B & 1:\n",
+    "        out = mul_matrix(out, A)    \n",
+    "    B >>= 1\n",
+    "    A = mul_matrix(A, A)\n",
+    "\n",
+    "for row in out:\n",
+    "    print(*row)\n"
    ]
   },
   {
