분할정복 골드 4

--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -463,12 +463,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "1b411793",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209783453\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8\t11444\t 피보나치 수 6"
+    "# 8\t11444\t 피보나치 수 6\n",
+    "import sys\n",
+    "from functools import lru_cache\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1000000000000000000''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "MOD = 1_000_000_007\n",
+    "\n",
+    "@lru_cache(None)\n",
+    "def F(N: int):\n",
+    "    if N == 0:\n",
+    "        return 0\n",
+    "    if N in (1, 2):\n",
+    "        return 1\n",
+    "    if N & 1:\n",
+    "        k = (N - 1) >> 1\n",
+    "        return (F(k)**2 + F(k + 1)**2) % MOD \n",
+    "    else:\n",
+    "        k = N >> 1\n",
+    "        return (F(k)*(2*F(k+1) - F(k))) % MOD\n",
+    "\n",
+    "print(F(n))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "036818df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "209783453\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 8\t11444\t 피보나치 수 6\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''1000000000000000000''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "n = int(input())\n",
+    "MOD = 1_000_000_007\n",
+    "\n",
+    "\n",
+    "def fib(n):\n",
+    "    if n == 0:\n",
+    "        return (0, 1)   # (n , n + 1)\n",
+    "\n",
+    "    a, b = fib(n >> 1)  # a = k, b = k + 1\n",
+    "\n",
+    "    c = (a*(2*b - a) % MOD) % MOD\n",
+    "    d = (a**2 + b**2) & MOD\n",
+    "\n",
+    "    if n & 0:\n",
+    "        return (c, d)\n",
+    "    else:\n",
+    "        return (d, (c + d) % MOD)\n",
+    "\n",
+    "print(F(n))"
    ]
   },
   {
