--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -554,9 +554,48 @@
    "execution_count": null,
    "id": "be36b0cb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8\n",
+      "4000\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9\t6549\t 히스토그램에서 가장 큰 직사각형"
+    "# 9\t6549\t 히스토그램에서 가장 큰 직사각형\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''7 2 1 4 5 1 3 3\n",
+    "4 1000 1000 1000 1000\n",
+    "0''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "while True:\n",
+    "    arr = list(map(int, input().split()))\n",
+    "    if arr == [0]:\n",
+    "        break\n",
+    "\n",
+    "    n = arr[0]\n",
+    "    h = arr[1:]\n",
+    "    h.append(0)\n",
+    "\n",
+    "    stack = []\n",
+    "    best = 0\n",
+    "\n",
+    "    for i in range(n + 1):\n",
+    "        while stack and h[stack[-1]] > h[i]:\n",
+    "            height = h[stack.pop()]\n",
+    "            left = stack[-1] + 1 if stack else 0\n",
+    "            width = i - left\n",
+    "            best = max(best, height * width)\n",
+    "        stack.append(i)\n",
+    "\n",
+    "    print(best)\n"
    ]
   }
  ],
