--- a/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
@@ -70,22 +70,112 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "2e67e123",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 0 0 1 2 0 0 2\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t10816\t 숫자 카드 2"
+    "# 2\t10816\t 숫자 카드 2\n",
+    "import sys \n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10\n",
+    "6 3 2 10 10 10 -10 -10 7 3\n",
+    "8\n",
+    "10 9 -5 2 3 4 5 -10''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "def lower_bound(arr, x):\n",
+    "    start, end = 0, len(arr)\n",
+    "\n",
+    "    while start < end:\n",
+    "        mid = start + end >> 1\n",
+    "        if arr[mid] >= x:\n",
+    "            end = mid\n",
+    "        else:\n",
+    "            start = mid + 1\n",
+    "    return start\n",
+    "\n",
+    "def upper_bound(arr, x):\n",
+    "    start, end = 0, len(arr)\n",
+    "    while start < end:\n",
+    "        mid = start + end >> 1\n",
+    "        if arr[mid] > x:\n",
+    "            end = mid\n",
+    "        else:\n",
+    "            start = mid + 1\n",
+    "    return start\n",
+    "\n",
+    "\n",
+    "N = int(input())\n",
+    "nums = list(map(int, input().split()))\n",
+    "nums.sort()\n",
+    "\n",
+    "M = int(input())\n",
+    "goals = list(map(int, input().split()))\n",
+    "\n",
+    "print(*[str(upper_bound(nums, goal) - lower_bound(nums, goal)) for goal in goals])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "id": "7ef8e0c5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t1654\t 랜선 자르기"
+    "# 3\t1654\t 랜선 자르기\n",
+    "import sys \n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 11\n",
+    "802\n",
+    "743\n",
+    "457\n",
+    "539''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "K, N = map(int, input().split())\n",
+    "def how_many(arr, x):\n",
+    "    count = 0\n",
+    "    for line in arr:\n",
+    "        count += line // x\n",
+    "    return count\n",
+    "\n",
+    "lines = [int(input()) for _ in range(K)]\n",
+    "\n",
+    "start = 1\n",
+    "end = max(lines) + 1\n",
+    "\n",
+    "while start < end:\n",
+    "    mid = (start + end + 1) // 2\n",
+    "    goal = N\n",
+    "    if how_many(lines, mid) >= goal:\n",
+    "        start = mid\n",
+    "    else:\n",
+    "        end = mid - 1\n",
+    "    \n",
+    "print(start)\n"
    ]
   },
   {
