--- a/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
@@ -183,9 +183,103 @@
    "execution_count": null,
    "id": "82c8580b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t2805\t 나무 자르기"
+    "# 4\t2805\t 나무 자르기\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 20\n",
+    "4 42 40 26 46''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N, M = map(int, input().split())\n",
+    "trees = list(map(int, input().split()))\n",
+    "\n",
+    "\n",
+    "def cut_tree(length: int) -> int:\n",
+    "    cuted_tree = 0\n",
+    "    for tree in trees:\n",
+    "        if tree > length:\n",
+    "            cuted_tree += tree - length\n",
+    "            if cuted_tree >= M:\n",
+    "                return cuted_tree\n",
+    "    return cuted_tree\n",
+    "\n",
+    "start = 0\n",
+    "end = max(trees)\n",
+    "\n",
+    "while start < end:\n",
+    "    mid = (start + end + 1) // 2\n",
+    "    mid_value = cut_tree(mid)\n",
+    "    if mid_value < M:\n",
+    "        end = mid - 1\n",
+    "    else:\n",
+    "        start = mid\n",
+    "\n",
+    "print(start)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "39b344bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "import bisect\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 20\n",
+    "4 42 40 26 46''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "trees = sorted(map(int, input().split()))\n",
+    "\n",
+    "# prefix[i] = trees[0] + ... + trees[i-1]\n",
+    "prefix = [0] * (N + 1)\n",
+    "for i in range(N):\n",
+    "    prefix[i + 1] = prefix[i] + trees[i]\n",
+    "\n",
+    "def cut_amount(h: int) -> int:\n",
+    "    # h보다 큰 나무의 첫 인덱스\n",
+    "    idx = bisect.bisect_right(trees, h)\n",
+    "\n",
+    "    cnt = N - idx\n",
+    "    if cnt == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    total_height = prefix[N] - prefix[idx]\n",
+    "    return total_height - h * cnt\n",
+    "\n",
+    "lo, hi = 0, trees[-1]\n",
+    "while lo < hi:\n",
+    "    mid = (lo + hi + 1) // 2\n",
+    "    if cut_amount(mid) >= M:\n",
+    "        lo = mid\n",
+    "    else:\n",
+    "        hi = mid - 1\n",
+    "\n",
+    "print(lo)"
    ]
   },
   {
