--- a/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
@@ -284,12 +284,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "id": "c1c5c6dc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t2110\t 공유기 설치"
+    "# 5\t2110\t 공유기 설치\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 3\n",
+    "1\n",
+    "2\n",
+    "8\n",
+    "4\n",
+    "9''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, C = map(int, input().split())\n",
+    "houses = [int(input()) for _ in range(N)]\n",
+    "houses.sort()\n",
+    "\n",
+    "start = 1\n",
+    "end = houses[-1] - houses[0]\n",
+    "answer = 0 # 최소 길이 값을 정하고 C 갯수 만큼 설치 가능한지 체크, 가능하면 길이를 늘리고, 불가능 하면 줄여서 탐색. \n",
+    "\n",
+    "while start <= end:\n",
+    "    mid = (start + end) // 2\n",
+    "    count = 1\n",
+    "    last = houses[0]\n",
+    "    for house in houses[1:]:\n",
+    "        if house - last >= mid:\n",
+    "            count += 1\n",
+    "            last = house\n",
+    "    if count >= C:\n",
+    "        answer = mid\n",
+    "        start = mid + 1\n",
+    "    else:\n",
+    "        end = mid - 1\n",
+    "\n",
+    "print(answer)\n",
+    "\n",
+    "\n"
    ]
   },
   {
