이분탐색 K번째 수

--- a/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
@@ -342,9 +342,51 @@
    "execution_count": null,
    "id": "7c8385fe",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t1300\t K번째 수"
+    "# 6\t1300\t K번째 수\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3\n",
+    "7''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "K = int(input())\n",
+    "\n",
+    "\n",
+    "def count(x):\n",
+    "    smalls_same_then_x = 0\n",
+    "\n",
+    "    for i in range(1, N + 1):\n",
+    "        if min(N, x//i) == 0:\n",
+    "            break\n",
+    "        smalls_same_then_x += min(N, x//i)\n",
+    "    return smalls_same_then_x\n",
+    "\n",
+    "\n",
+    "start = 1\n",
+    "end = N**2 + 1\n",
+    "\n",
+    "while start < end:\n",
+    "    mid = (start + end) // 2\n",
+    "    mid_value = count(mid)\n",
+    "    if mid_value >= K:\n",
+    "        end = mid\n",
+    "    else:\n",
+    "        start = mid + 1\n",
+    "\n",
+    "print(start)"
    ]
   },
   {
