가장 긴 증가 수열

--- a/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
@@ -394,9 +394,46 @@
    "execution_count": null,
    "id": "6b99b551",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t12015\t 가장 긴 증가하는 부분 수열 2"
+    "# 7\t12015\t 가장 긴 증가하는 부분 수열 2\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6\n",
+    "10 20 10 30 20 50''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "\n",
+    "lst = [A[0]]\n",
+    "\n",
+    "for goal in A[1:]:\n",
+    "    start = 0\n",
+    "    end = len(lst)\n",
+    "    while start < end:\n",
+    "        mid = (start + end) // 2\n",
+    "        if lst[mid] >= goal:\n",
+    "            end = mid\n",
+    "        else:\n",
+    "            start = mid + 1\n",
+    "    if len(lst) == start:\n",
+    "        lst.append(goal)\n",
+    "    else:\n",
+    "        lst[start] = goal\n",
+    "\n",
+    "print(len(lst))"
    ]
   }
  ],
