--- a/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C25_이분_탐색.ipynb
@@ -416,7 +416,6 @@
     "N = int(input())\n",
     "A = list(map(int, input().split()))\n",
     "\n",
-    "\n",
     "lst = [A[0]]\n",
     "\n",
     "for goal in A[1:]:\n",
@@ -432,6 +431,44 @@
     "        lst.append(goal)\n",
     "    else:\n",
     "        lst[start] = goal\n",
+    "\n",
+    "print(len(lst))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da1350d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t12015\t 가장 긴 증가하는 부분 수열 2\n",
+    "import sys\n",
+    "from bisect import bisect_left\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6\n",
+    "10 20 10 30 20 50''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "lst = list()\n",
+    "for goal in map(int, input().split()):\n",
+    "    idx = bisect_left(lst, goal)\n",
+    "    if len(lst) == idx:\n",
+    "        lst.append(goal)\n",
+    "    else:\n",
+    "        lst[idx] = goal\n",
     "\n",
     "print(len(lst))"
    ]
