우선순위 큐 최소힙

--- a/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
@@ -126,76 +126,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ec5dab8f",
+   "execution_count": 15,
+   "id": "67d392c8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "12345678\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1\t11279\t 최대 힙 최적화. \n",
-    "\n",
+    "# 2\t1927\t 최소 힙\n",
     "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''9\n",
+    "0\n",
+    "12345678\n",
+    "1\n",
+    "2\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "32''')\n",
+    "\n",
     "input = sys.stdin.readline\n",
     "\n",
     "N = int(input())\n",
-    "heap = []\n",
-    "out = []\n",
+    "\n",
+    "out = list()\n",
+    "heap = list()\n",
     "\n",
     "for _ in range(N):\n",
-    "    x = int(input())\n",
+    "    num = int(input())\n",
     "\n",
-    "    # pop\n",
-    "    if x == 0:\n",
-    "        if not heap:\n",
-    "            out.append(0)\n",
+    "    if num == 0: # pop()\n",
+    "        if heap: # 1개 이상\n",
+    "            out.append(heap[0]) \n",
+    "            temp = heap.pop()\n",
+    "\n",
+    "            if heap: # 1개 초과 (2개 이상) (pop이후 남아 있는경우)\n",
+    "                heap[0] = temp\n",
+    "                parent_idx = 0\n",
+    "                while True:\n",
+    "                    left_idx = 2*parent_idx + 1\n",
+    "                    right_idx = 2*parent_idx + 2\n",
+    "                    target_idx = parent_idx\n",
+    "\n",
+    "                    if left_idx < len(heap) and heap[left_idx] < heap[target_idx]:\n",
+    "                        target_idx = left_idx\n",
+    "                    if right_idx < len(heap) and heap[right_idx] < heap[target_idx]:\n",
+    "                        target_idx = right_idx\n",
+    "\n",
+    "                    if target_idx == parent_idx:\n",
+    "                        break\n",
+    "                    \n",
+    "                    heap[target_idx], heap[parent_idx] = heap[parent_idx], heap[target_idx]\n",
+    "                    parent_idx = target_idx\n",
+    "\n",
     "            continue\n",
+    "        out.append(0) # 0개 일때\n",
     "\n",
-    "        out.append(heap[0])\n",
-    "\n",
-    "        last = heap.pop()\n",
-    "        if heap:\n",
-    "            heap[0] = last\n",
-    "            idx = 0\n",
-    "            size = len(heap)\n",
-    "\n",
-    "            while True:\n",
-    "                left = 2 * idx + 1\n",
-    "                right = 2 * idx + 2\n",
-    "                largest = idx\n",
-    "\n",
-    "                if left < size and heap[left] > heap[largest]:\n",
-    "                    largest = left\n",
-    "                if right < size and heap[right] > heap[largest]:\n",
-    "                    largest = right\n",
-    "\n",
-    "                if largest == idx:\n",
-    "                    break\n",
-    "\n",
-    "                heap[idx], heap[largest] = heap[largest], heap[idx]\n",
-    "                idx = largest\n",
-    "\n",
-    "    # push\n",
-    "    else:\n",
-    "        heap.append(x)\n",
-    "        idx = len(heap) - 1\n",
-    "\n",
-    "        while idx > 0:\n",
-    "            parent = (idx - 1) // 2\n",
-    "            if heap[parent] >= heap[idx]:\n",
+    "    else: # push()\n",
+    "        heap.append(num)\n",
+    "        child_idx = len(heap) - 1\n",
+    "        while child_idx > 0:\n",
+    "            parent_idx = (child_idx - 1) // 2\n",
+    "            if heap[child_idx] >= heap[parent_idx]:\n",
     "                break\n",
-    "            heap[parent], heap[idx] = heap[idx], heap[parent]\n",
-    "            idx = parent\n",
-    "\n",
-    "print(\"\\n\".join(map(str, out)))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67d392c8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 2\t1927\t 최소 힙"
+    "            heap[child_idx], heap[parent_idx] = heap[parent_idx], heap[child_idx]\n",
+    "            child_idx = parent_idx\n",
+    "    \n",
+    "print(\"\\n\".join(map(str, out)))"
    ]
   },
   {
