--- a/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
@@ -210,12 +210,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c8688f7b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n",
+      "1\n",
+      "0\n",
+      "-1\n",
+      "-1\n",
+      "1\n",
+      "1\n",
+      "-2\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t11286\t 절댓값 힙"
+    "# 3\t11286\t 절댓값 힙\n",
+    "\n",
+    "import sys\n",
+    "from heapq import heappop, heappush\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''18\n",
+    "1\n",
+    "-1\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "1\n",
+    "1\n",
+    "-1\n",
+    "-1\n",
+    "2\n",
+    "-2\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0\n",
+    "0''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "\n",
+    "heap = []\n",
+    "out = []\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    \n",
+    "    num = int(input())\n",
+    "    \n",
+    "    if num == 0:\n",
+    "        if not heap:\n",
+    "            out.append(0)\n",
+    "            continue\n",
+    "        out.append(heappop(heap)[1])\n",
+    "    else:\n",
+    "        heappush(heap, (abs(num), num))\n",
+    "\n",
+    "print(\"\\n\".join(map(str, out)))\n"
    ]
   },
   {
@@ -223,9 +284,39 @@
    "execution_count": null,
    "id": "e1439289",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t2075\t N번째 큰 수"
+    "# 4\t2075\t N번째 큰 수\n",
+    "import sys\n",
+    "from heapq import heapify, heappushpop\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5\n",
+    "12 7 9 15 5\n",
+    "13 8 11 19 6\n",
+    "21 10 26 31 16\n",
+    "48 14 28 35 25\n",
+    "52 20 32 41 49''')\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "heap = list(map(int, input().split()))\n",
+    "heapify(heap)\n",
+    "\n",
+    "for _ in range(N - 1):\n",
+    "    for x in map(int, input().split()):\n",
+    "        heappushpop(heap, x)\n",
+    "\n",
+    "print(heap[0])\n"
    ]
   },
   {
@@ -251,7 +342,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
