--- a/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
@@ -321,12 +321,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "901d6f6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1 2 3 4 5\n",
+      "5\n",
+      "9 8 7 6 5\n",
+      "12\n",
+      "23 23 22 22 13 3 5 5 3 -3\n",
+      "-7 -3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t2696\t 중앙값 구하기"
+    "# 5\t2696\t 중앙값 구하기\n",
+    "import sys\n",
+    "from heapq import heappush,heappushpop\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''3\n",
+    "9\n",
+    "1 2 3 4 5 6 7 8 9\n",
+    "9\n",
+    "9 8 7 6 5 4 3 2 1\n",
+    "23\n",
+    "23 41 13 22 -3 24 -31 -11 -8 -7\n",
+    "3 5 103 211 -311 -45 -67 -73 -81 -99\n",
+    "-33 24 56''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "for _ in range(N):\n",
+    "    M = int(input()) # 홀수 \n",
+    "\n",
+    "    max_heap = [] # 중앙 값 보유.\n",
+    "    min_heap = [] \n",
+    "    out = [] # 결과.\n",
+    "\n",
+    "    for _ in range(M//10 + 1):\n",
+    "        for i, num in enumerate(map(int, input().split())):\n",
+    "            if not max_heap: # 시작\n",
+    "                max_heap.append(-num)\n",
+    "                out.append(num)\n",
+    "                continue\n",
+    "            if i & 1: # 값이 있고, 짝수번째 입력 (인덱스는 홀 수 1, 3, 5) (맥스 길이가  min길이보다 1개 더 긴 상태.)\n",
+    "                heappush(min_heap, -heappushpop(max_heap, -num))\n",
+    "\n",
+    "            else: # (홀수번째 입력) 짝수 인덱스 이면(0, 2, 4) .(max, min 길이가 같은 상태)\n",
+    "                center = -max_heap[0]\n",
+    "                if center >= num:\n",
+    "                    heappush(max_heap, -num)\n",
+    "                else:\n",
+    "                    heappush(max_heap, -heappushpop(min_heap, num))\n",
+    "                out.append(-max_heap[0])\n",
+    "\n",
+    "    out_length = len(out)\n",
+    "    print(out_length)\n",
+    "\n",
+    "    if out_length <= 10:\n",
+    "        print(*out)\n",
+    "    else:\n",
+    "        for i in range(out_length//10 + 1):\n",
+    "            print(*out[0 + i*10 : 10 + i*10])\n"
    ]
   },
   {
@@ -342,7 +406,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
