우선순위 큐

--- a/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C26_우선순위_큐.ipynb
@@ -395,12 +395,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "26662ad7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t1202\t 보석 도둑"
+    "# 6\t1202\t 보석 도둑\n",
+    "import sys\n",
+    "from heapq import heappush, heappop\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin= StringIO('''2 1\n",
+    "5 10\n",
+    "100 100\n",
+    "11''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, K = map(int, input().split()) # 보석개수, 가방개수\n",
+    "\n",
+    "gram_price = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "gram_price.sort(key=lambda x: (x[0]))\n",
+    "\n",
+    "bag_mass = [int(input()) for _ in range(K)]\n",
+    "bag_mass.sort()\n",
+    "\n",
+    "\n",
+    "gram_price_idx = 0\n",
+    "prices = 0\n",
+    "jewels = []\n",
+    "for gram in bag_mass:\n",
+    "    for i in range(gram_price_idx, len(gram_price)):\n",
+    "        jewel = gram_price[i]\n",
+    "        if jewel[0] <= gram:\n",
+    "            heappush(jewels, -jewel[1])\n",
+    "        else:\n",
+    "            gram_price_idx = i\n",
+    "            break\n",
+    "    else: \n",
+    "        gram_price_idx = N\n",
+    "    \n",
+    "    if jewels:\n",
+    "        prices += -heappop(jewels)\n",
+    "\n",
+    "print(prices)"
    ]
   }
  ],
