그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -2,17 +2,141 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "02fb69c2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 1\t24479\t 알고리즘 수업 - 깊이 우선 탐색 1"
+    "# 1\t24479\t 알고리즘 수업 - 깊이 우선 탐색 1\n",
+    "\n",
+    "import sys\n",
+    "from bisect import insort\n",
+    "sys.setrecursionlimit(10**7)\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 5 1\n",
+    "1 4\n",
+    "1 2\n",
+    "2 3\n",
+    "2 4\n",
+    "3 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M, R = map(int, input().split())\n",
+    "\n",
+    "visited = [0]*N\n",
+    "\n",
+    "nodes: dict[int, list[int]] = {}\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    start, end = map(int, input().split())\n",
+    "    temp = nodes.setdefault(start, [])\n",
+    "    insort(temp, end)\n",
+    "    temp = nodes.setdefault(end, [])\n",
+    "    insort(temp, start)\n",
+    "\n",
+    "\n",
+    "count = 1\n",
+    "def dfs(R):\n",
+    "    global count\n",
+    "\n",
+    "    if visited[R-1]: return \n",
+    "    visited[R-1] = count\n",
+    "    count += 1\n",
+    "    for node in nodes.get(R, []):\n",
+    "        if visited[node-1]: continue\n",
+    "        dfs(node)\n",
+    "\n",
+    "dfs(R)\n",
+    "\n",
+    "print(\"\\n\".join(map(str, visited)))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "6d25050f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1\t24479\t 알고리즘 수업 - 깊이 우선 탐색 1\n",
+    "\n",
+    "import sys\n",
+    "sys.setrecursionlimit(10**7)\n",
+    "\n",
+    "from io import StringIO\n",
+    "from time import perf_counter, perf_counter_ns\n",
+    "sys.stdin = StringIO('''5 5 1\n",
+    "1 4\n",
+    "1 2\n",
+    "2 3\n",
+    "2 4\n",
+    "3 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "N, M, R = map(int, input().split())\n",
+    "\n",
+    "# 방문 순서 기록 (1번 정점부터 사용)\n",
+    "visited = [0] * (N + 1)\n",
+    "\n",
+    "# 인접 리스트 (가장 효율적인 그래프 저장 방식)\n",
+    "graph = [[] for _ in range(N + 1)]\n",
+    "\n",
+    "# 간선 입력\n",
+    "for _ in range(M):\n",
+    "    u, v = map(int, input().split())\n",
+    "    graph[u].append(v)\n",
+    "    graph[v].append(u)\n",
+    "\n",
+    "# 문제 조건: 정점 번호가 작은 것부터 방문\n",
+    "for i in range(1, N + 1):\n",
+    "    graph[i].sort()\n",
+    "\n",
+    "order = 1\n",
+    "def dfs(v):\n",
+    "    global order\n",
+    "    visited[v] = order\n",
+    "    order += 1\n",
+    "    for nxt in graph[v]:\n",
+    "        if visited[nxt] == 0:\n",
+    "            dfs(nxt)\n",
+    "\n",
+    "dfs(R)\n",
+    "\n",
+    "# 출력\n",
+    "print(\"\\n\".join(map(str, visited[1:])))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
    "id": "e1e3c076",
    "metadata": {},
    "outputs": [],
@@ -162,8 +286,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "251117_MathForPython",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
