--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -136,12 +136,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "e1e3c076",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2\t24480\t 알고리즘 수업 - 깊이 우선 탐색 2"
+    "# 2\t24480\t 알고리즘 수업 - 깊이 우선 탐색 2\n",
+    "import sys\n",
+    "sys.setrecursionlimit(10**7)\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 5 1\n",
+    "1 4\n",
+    "1 2\n",
+    "2 3\n",
+    "2 4\n",
+    "3 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "\n",
+    "N, M, R = map(int, input().split())\n",
+    "\n",
+    "nodes : dict[int, list[int]] = {}\n",
+    "visited = [0] * (N + 1)\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    start, end = map(int, input().split())\n",
+    "    if not start in nodes:\n",
+    "        nodes[start] = []\n",
+    "    nodes[start].append(end)\n",
+    "\n",
+    "    if not end in nodes:\n",
+    "        nodes[end] = []\n",
+    "    nodes[end].append(start)\n",
+    "\n",
+    "for val in nodes.values():\n",
+    "    val.sort(reverse=True)\n",
+    "\n",
+    "\n",
+    "count = 0\n",
+    "def dfs(r):\n",
+    "    global count\n",
+    "    if visited[r]: return\n",
+    "    count += 1\n",
+    "    visited[r] = count\n",
+    "\n",
+    "    for node in nodes.get(r, []):\n",
+    "        if visited[node]: continue\n",
+    "        dfs(node)\n",
+    "\n",
+    "dfs(R)\n",
+    "print(\"\\n\".join(map(str, visited[1:])))"
    ]
   },
   {
@@ -287,7 +345,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
