--- a/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C24_분할_정복.ipynb
@@ -601,7 +601,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
