--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -207,9 +207,65 @@
    "execution_count": null,
    "id": "229c7ea1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n",
+      "3\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 3\t24444\t 알고리즘 수업 - 너비 우선 탐색 1"
+    "# 3\t24444\t 알고리즘 수업 - 너비 우선 탐색 1\n",
+    "\n",
+    "from bisect import insort\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 5 1\n",
+    "1 4\n",
+    "1 2\n",
+    "2 3\n",
+    "2 4\n",
+    "3 4''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N, M, R = map(int, input().split())\n",
+    "\n",
+    "visited = [0] * (N + 1)\n",
+    "nodes: dict[int, list[int]] = {}\n",
+    "dq = deque()\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    s, e = map(int, input().split())\n",
+    "    insort(nodes.setdefault(s, []), e)\n",
+    "    insort(nodes.setdefault(e, []), s)\n",
+    "\n",
+    "\n",
+    "def bfs(sn):\n",
+    "    dq.append(sn)\n",
+    "    visited[sn] = 1\n",
+    "    count = 1\n",
+    "\n",
+    "    while dq:\n",
+    "        cur = dq.popleft()\n",
+    "\n",
+    "        for node in nodes.get(cur, []):\n",
+    "            if not visited[node]:\n",
+    "                count += 1\n",
+    "                visited[node] = count\n",
+    "                dq.append(node)\n",
+    "\n",
+    "\n",
+    "bfs(R)\n",
+    "print(\"\\n\".join(map(str, visited[1:])))"
    ]
   },
   {
