--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -270,12 +270,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "087009e5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "4\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 4\t24445\t 알고리즘 수업 - 너비 우선 탐색 2"
+    "# 4\t24445\t 알고리즘 수업 - 너비 우선 탐색 2\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 5 1\n",
+    "1 4\n",
+    "1 2\n",
+    "2 3\n",
+    "2 4\n",
+    "3 4''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M, R = map(int, input().split())\n",
+    "\n",
+    "nodes: dict[int, list[int]] = {}\n",
+    "\n",
+    "from bisect import insort\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    s, e = map(int, input().split())\n",
+    "    insort(nodes.setdefault(-s, []), -e)\n",
+    "    insort(nodes.setdefault(-e, []), -s)\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "visited = [0] * (N + 1)\n",
+    "\n",
+    "def bfs(r):\n",
+    "    dq = deque([-r])\n",
+    "    count = 1\n",
+    "    visited[r] = count\n",
+    "\n",
+    "    while dq:\n",
+    "        cur = dq.popleft()\n",
+    "        for node in nodes.get(cur, []):\n",
+    "            if not visited[-node]:\n",
+    "                count += 1\n",
+    "                visited[-node] = count\n",
+    "                dq.append(node)\n",
+    "\n",
+    "bfs(R)\n",
+    "print(\"\\n\".join(map(str, visited[1:])))\n",
+    "\n"
    ]
   },
   {
@@ -283,9 +338,58 @@
    "execution_count": null,
    "id": "0e4b1e3e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t2606\t 바이러스"
+    "# 5\t2606\t 바이러스\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''7\n",
+    "6\n",
+    "1 2\n",
+    "2 3\n",
+    "1 5\n",
+    "5 2\n",
+    "5 6\n",
+    "4 7''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "M = int(input())\n",
+    "\n",
+    "visited = [False] * (N + 1)\n",
+    "links = [[] for _ in range(N + 1)]\n",
+    "\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    s, e = map(int, input().split())\n",
+    "    links[s].append(e)\n",
+    "    links[e].append(s)\n",
+    "\n",
+    "count = 0\n",
+    "def dfs(r):\n",
+    "    global count\n",
+    "\n",
+    "    if not visited[r]:\n",
+    "        count += 1\n",
+    "        visited[r] = True\n",
+    "\n",
+    "        for link in links[r]:\n",
+    "            if not visited[link]:\n",
+    "                dfs(link)\n",
+    "\n",
+    "dfs(1)\n",
+    "print(count-1)\n",
+    "\n"
    ]
   },
   {
@@ -401,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
