그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -397,9 +397,80 @@
    "execution_count": null,
    "id": "355f8959",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 1 2 5 4\n",
+      "3 1 4 2 5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t1260\t DFS와 BFS"
+    "# 6\t1260\t DFS와 BFS\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 5 3\n",
+    "5 4\n",
+    "5 2\n",
+    "1 2\n",
+    "3 4\n",
+    "3 1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M, V = map(int, input().split())\n",
+    "\n",
+    "links = [[] for _ in range(N + 1)]\n",
+    "\n",
+    "for _ in range(M):\n",
+    "    s, e = map(int, input().split())\n",
+    "    links[s].append(e)\n",
+    "    links[e].append(s)\n",
+    "\n",
+    "for link in links:\n",
+    "    link.sort()\n",
+    "\n",
+    "\n",
+    "def dfs(start):\n",
+    "    visited = [False] * (N+1)\n",
+    "    out = []\n",
+    "\n",
+    "    def recur(n):\n",
+    "        if not visited[n]:\n",
+    "            out.append(n)\n",
+    "            visited[n] = True\n",
+    "\n",
+    "            for node in links[n]:\n",
+    "                if not visited[node]:\n",
+    "                    recur(node)\n",
+    "\n",
+    "    recur(start)\n",
+    "    return out\n",
+    "\n",
+    "\n",
+    "def bfs(start):\n",
+    "    visited = [False] * (N+1)\n",
+    "    out = []\n",
+    "\n",
+    "    dq = deque([start])\n",
+    "    visited[start] = True \n",
+    "    \n",
+    "    while dq:\n",
+    "        cur = dq.popleft()\n",
+    "        out.append(cur)\n",
+    "        for node in links[cur]:\n",
+    "            if not visited[node]:\n",
+    "                visited[node] = True\n",
+    "                dq.append(node)\n",
+    "\n",
+    "    return out\n",
+    "\n",
+    "print(*dfs(V))\n",
+    "print(*bfs(V))"
    ]
   },
   {
