그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -475,12 +475,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "id": "52be26bf",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t2667\t 단지번호붙이기"
+    "# 7\t2667\t 단지번호붙이기\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''7\n",
+    "0110100\n",
+    "0110101\n",
+    "1110101\n",
+    "0000111\n",
+    "0100000\n",
+    "0111110\n",
+    "0111000''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "apts = [list(map(int, input().rstrip())) for _ in range(N)]\n",
+    "\n",
+    "dangi_count = 0\n",
+    "out = []\n",
+    "\n",
+    "directions = [(-1, 0), (1, 0), (0, -1), (0, 1)]\n",
+    "\n",
+    "def dfs(row, col):\n",
+    "    apts[row][col] = 0\n",
+    "    apt_count = 1\n",
+    "\n",
+    "    for i, j in directions:\n",
+    "        if 0 <= row + i < N and 0 <= col + j < N:\n",
+    "            if apts[row + i][col + j]:\n",
+    "                apt_count += dfs(row + i, col + j)\n",
+    "\n",
+    "    return apt_count\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(N):\n",
+    "        if apts[i][j]:\n",
+    "            dangi_count += 1\n",
+    "            out.append(dfs(i, j))\n",
+    "\n",
+    "out.sort()\n",
+    "print(dangi_count)\n",
+    "print(\"\\n\".join(map(str, out)))\n"
    ]
   },
   {
