그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -539,12 +539,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "4b037524",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8\t1012\t 유기농 배추"
+    "# 8\t1012\t 유기농 배추\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''2\n",
+    "10 8 17\n",
+    "0 0\n",
+    "1 0\n",
+    "1 1\n",
+    "4 2\n",
+    "4 3\n",
+    "4 5\n",
+    "2 4\n",
+    "3 4\n",
+    "7 4\n",
+    "8 4\n",
+    "9 4\n",
+    "7 5\n",
+    "8 5\n",
+    "9 5\n",
+    "7 6\n",
+    "8 6\n",
+    "9 6\n",
+    "10 10 1\n",
+    "5 5''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "T = int(input())\n",
+    "\n",
+    "directions = [(+1, 0), (0, +1), (-1, 0), (0, -1)]\n",
+    "out = [0] * T\n",
+    "\n",
+    "\n",
+    "def BFS(row, col, field, width, height):\n",
+    "\n",
+    "    dq = deque([(row, col)])\n",
+    "    field[row][col] = False\n",
+    "\n",
+    "    while dq:\n",
+    "        r, c = dq.popleft()\n",
+    "\n",
+    "        for dr, dc in directions:\n",
+    "            h, w = r + dr, c + dc\n",
+    "            if 0 <= h < height and 0 <= w < width:\n",
+    "                if field[h][w]:\n",
+    "                    dq.append((h, w))\n",
+    "                    field[h][w] = False\n",
+    "\n",
+    "\n",
+    "for i in range(T):\n",
+    "    M, N, K = map(int, input().split())\n",
+    "    field = [[False] * M for _ in range(N)]\n",
+    "    cabbages = []\n",
+    "\n",
+    "    for _ in range(K):\n",
+    "        c, r = map(int, input().split())\n",
+    "        field[r][c] = True\n",
+    "        cabbages.append((r, c))\n",
+    "\n",
+    "    for r, c in cabbages:\n",
+    "        if field[r][c]:\n",
+    "            BFS(r, c, field, M, N)\n",
+    "            out[i] += 1\n",
+    "\n",
+    "print(\"\\n\".join(map(str, out)))"
    ]
   },
   {
