그래프와 순회

--- a/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C27_그래프와_순회.ipynb
@@ -627,9 +627,43 @@
    "execution_count": null,
    "id": "3239e869",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 0 1 1 0\n",
+      "1 1 0 1 1 0\n",
+      "1 1 1 1 1 1\n",
+      "1 1 1 1 0 1\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9\t2178\t 미로 탐색"
+    "# 9\t2178\t 미로 탐색\n",
+    "from collections import deque\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 6\n",
+    "110110\n",
+    "110110\n",
+    "111111\n",
+    "111101''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "maze = [list(map(int, input().rstrip())) for _ in range(N)]\n",
+    "\n",
+    "\n",
+    "\n",
+    "def BFS ():\n",
+    "    pass\n",
+    "\n",
+    "\n",
+    "for row in maze:\n",
+    "    print(*row)\n"
    ]
   },
   {
